[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EuclidSearchPackage"
version = "0.5.1"
authors = [
  { name="Euclid Jie", email="Ouweijie123@outlook.coom" },
]
description = "a package for search data from weibo, zhihu, guba and etc."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Euclid-Jie/EuclidSearchPackage"
"Bug Tracker" = "https://github.com/Euclid-Jie/EuclidSearchPackage/issues"